# clipboard-sync

./: Cargo.toml
.github/workflows/: release.yml
src/: clipboard.rs  main.rs  network.rs  notification.rs
