[package]
name = "clipboard-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
# P2P 网络通信
iroh = { version = "0.91.2", features = ["discovery-local-network"] }

# 异步运行时
tokio = { version = "1.47.1", features = ["full"] }

# 剪贴板操作
arboard = "3.6.1"

# 数据序列化
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

# 错误处理
anyhow = "1.0.99"

# 命令行参数
clap = { version = "4.5.47", features = ["derive"] }

# 系统通知
notify-rust = "4.11.7"

# 图片处理
image = "0.24"

base64 = "0.22.1"
n0-future = "0.1"
futures-lite = "2.0"
